# httpsd

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  client.c  client.h  config.h  conn.c  epoll.c  epoll.h  g9-https-redirect.service  http2s.service  http2sd.service  main.c  misc.h  parser.c  parser.h  reqparser.c  reqparser.h  server.c  util.c  util.h
cmake/: FindSystemD.cmake
data/: http2s.service.in
libs/: parse_vdso.c  parse_vdso.h
src/: CMakeLists.txt  cli.c  cli.d  cli.h  conn.c  conn.d  conn.h  epoll.c  epoll.d  epoll.h  main.c  main.d  reqparser.c  reqparser.d  reqparser.h  sys.c  sys.h  tmp.c  tmp.d  tmp.h  util.c  util.h
